--- a/styles.css
+++ b/styles.css
@@ -327,16 +327,17 @@
 
 .main__content p {
   margin-top: 1rem;
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 50;
+  text-align: left;
 }
 
 .main__btn {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   background: #833ab4;
   background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
   background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  padding: 20px 60px;
+  padding: 15px 60px;
   border: none;
   border-radius: 4px;
   margin-top: 2rem;
@@ -377,7 +378,7 @@
   text-align: center;
 }
 
-.main__img--card {
+/* .main__img--card {
   margin: 10px;
   height: 500px;
   width: 500px;
@@ -387,10 +388,9 @@
   justify-content: center;
   color: #fff;
   background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
-}
+} */
 
-.fa-layer-group,
-.fa-users {
+.fa-heart {
   font-size: 14rem;
 }
 
@@ -418,8 +418,8 @@
   }
 
   .main__img--card {
-    height: 425px;
-    width: 425px;
+    height: 225px;
+    width: 225px;
   }
 
   .main__content {
@@ -448,8 +448,7 @@
     height: 250px;
   }
 
-  .fa-users,
-  .fa-layer-group {
+  .fa-heart {
     font-size: 4rem;
   }
 
@@ -471,8 +470,8 @@
   }
 }
 
-/* Services Section */
-.services {
+/* Experience Section */
+.experience {
   background: #131313;
   display: flex;
   flex-direction: column;
@@ -482,7 +481,7 @@
   padding: 10rem 0;
 }
 
-.services h1 {
+.experience h1 {
   background-color: #ff8177;
   background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
   background-size: 100%;
@@ -494,95 +493,99 @@
   font-size: 2.5rem;
 }
 
-.services__wrapper {
+.experience__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
 }
 
-.services__card {
+.experience__card {
   margin: 10px;
-  height: 425px;
-  width: 300px;
+  height: 625px;
+  width: 350px;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #fff;
-  background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+  color: rgb(255, 255, 255);
+  background-image: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
   transition: 0.3s ease-in;
 }
 
-.services__card:nth-child(2) {
+
+.experience__card:nth-child(2) {
   background: #1fa2ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #a6ffcb,
-    #12d8fa,
-    #1fa2ff
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #a6ffcb,
-    #12d8fa,
-    #1fa2ff
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
+  background: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
 }
 
-.services__card:nth-child(3) {
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
-  );
+.experience__card:nth-child(3) {
+  background-image: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
 }
 
-.services__card h2 {
+.experience__card h2 {
   text-align: center;
 }
+.experience__card h3 {
+  text-align: center;
+  font-size: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
 
-.services__card p {
+.experience__card p {
   text-align: center;
   margin-top: 24px;
-  font-size: 20px;
+  font-size: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.experience__card ul {
+  text-align: left;
+  margin-top: 2px;
+  font-size: 15px;
+  margin-left: 25px;
+  margin-right: 8px;
 }
 
-.services__btn {
+.experience__btn {
   display: flex;
   justify-content: center;
   margin-top: 16px;
 }
 
-.services__card button {
+.experience__card button {
   color: #fff;
   padding: 14px 24px;
   border: none;
   outline: none;
   border-radius: 4px;
-  background: #131313;
   font-size: 1rem;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #070707, #ff7c01, #ffd901);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  color: #fff;
+  transition: all 0.3s ease;
 }
 
-.services__card button:hover {
+.experience__card button:hover {
   cursor: pointer;
 }
 
-.services__card:hover {
+.experience__card:hover {
   transform: scale(1.075);
   transition: 0.3s ease-in;
   cursor: pointer;
 }
 
 @media screen and (max-width: 1300px) {
-  .services__wrapper {
+  .experience__wrapper {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .services__wrapper {
+  .experience__wrapper {
     grid-template-columns: 1fr;
   }
 }
@@ -674,6 +677,16 @@
   color: #fff;
 }
 
+.logo {
+  border-radius:50%;
+  width:100px;
+  height:100px;
+  border: 10px solid rgb(252, 152, 3);
+  border-image-slice: 1;
+  border-width: 5px;
+
+}
+
 @media screen and (max-width: 820px) {
   .footer__links {
     padding-top: 2rem;
@@ -702,4 +715,27 @@
     padding: 10px;
     width: 100%;
   }
+}
+
+
+.typewrite{
+  font-size: 2.5rem;
+  color: #e9e9e9;
+}
+
+.profile_img{
+  border-radius:10%;
+  width:150px;
+  height:185px;
+  border: 10px solid rgb(252, 152, 3);
+  border-image-slice: 1;
+  border-width: 5px;
+  text-align: left;
+
+}
+.img{
+  width:150px;
+  height:185px;
+  text-align: left;
+
 }
