--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -268,7 +268,7 @@
   }
 }
 
-/* About Section */
+/* About Me Section */
 .main {
   background-color: #131313;
   padding: 10rem 0;
@@ -280,12 +280,13 @@
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  height: 90%;
+  height: 70%;
   z-index: 1;
   width: 100%;
   max-width: 1300px;
   padding: 0 50px;
 }
+
 
 .main__content {
   color: #fff;
@@ -332,6 +333,70 @@
   text-align: left;
 }
 
+
+.main__content {
+  color: #fff;
+  width: 100%;
+}
+
+.main__content h1 {
+  font-size: 3rem;
+  background-color: #fe3b6f;
+  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+}
+
+.main__content h2 {
+  font-size: 4rem;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9114ff,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f0eff,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.main__content h3 {
+  font-size: 2rem;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9114ff,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f0eff,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.main__content p {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 50;
+  text-align: left;
+}
 .main__btn {
   font-size: 1.5rem;
   background: #833ab4;
@@ -378,7 +443,7 @@
   text-align: center;
 }
 
-.main__img--card2 {
+/* .main__img--card {
   margin: 5px;
   height: 300px;
   width: 300px;
@@ -388,7 +453,7 @@
   justify-content: center;
   color: #fff;
   background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
-}
+} */
 
 .fa-heart {
   font-size: 14rem;
@@ -418,8 +483,8 @@
   }
 
   .main__img--card {
-    height: 225px;
-    width: 225px;
+    height: 425px;
+    width: 425px;
   }
 
   .main__content {
@@ -444,8 +509,8 @@
 
 @media screen and (max-width: 480px) {
   .main__img--card {
-    width: 250px;
-    height: 250px;
+    width: 450px;
+    height: 450px;
   }
 
   .fa-heart {
@@ -478,7 +543,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 10rem 0;
+  padding: 5rem 0;
 }
 
 .experience h1 {
@@ -548,29 +613,6 @@
   margin-right: 8px;
 }
 
-.experience__btn {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-
-.experience__card button {
-  color: #fff;
-  padding: 14px 24px;
-  border: none;
-  outline: none;
-  border-radius: 4px;
-  font-size: 1rem;
-  background: #833ab4;
-  background: -webkit-linear-gradient(to right, #070707, #ff7c01, #ffd901);
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  color: #fff;
-  transition: all 0.3s ease;
-}
-
-.experience__card button:hover {
-  cursor: pointer;
-}
 
 .experience__card:hover {
   transform: scale(1.075);
@@ -586,6 +628,126 @@
 
 @media screen and (max-width: 768px) {
   .experience__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Project Section */
+.project {
+  background: #131313;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 5rem 0;
+}
+
+.project h1 {
+  background-color: #ff8177;
+  background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
+}
+
+.project__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.project__card {
+  margin: 10px;
+  height: 625px;
+  width: 350px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+  background-image: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
+  transition: 0.3s ease-in;
+}
+
+
+.project__card:nth-child(2) {
+  background: #1fa2ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
+  background: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
+}
+
+.project__card:nth-child(3) {
+  background-image: linear-gradient(-225deg, #ff8a05 0%, #ffa704  30%, #f3b353 70%, #9f09f5 100%);
+}
+
+.project__card h2 {
+  text-align: center;
+}
+.project__card h3 {
+  text-align: center;
+  font-size: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.project__card p {
+  text-align: center;
+  margin-top: 24px;
+  font-size: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.project__card ul {
+  text-align: left;
+  margin-top: 2px;
+  font-size: 15px;
+  margin-left: 25px;
+  margin-right: 8px;
+}
+
+/* .project__btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.project__card button {
+  color: #fff;
+  padding: 14px 24px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #070707, #ff7c01, #ffd901);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  color: #fff;
+  transition: all 0.3s ease;
+}
+
+.project__card button:hover {
+  cursor: pointer;
+} */
+
+.project__card:hover {
+  transform: scale(1.075);
+  transition: 0.3s ease-in;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+  .project__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project__wrapper {
     grid-template-columns: 1fr;
   }
 }
@@ -668,12 +830,16 @@
 
 .social__icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 240px;
+  width: 140px;
 }
 
 .website__rights {
+  color: #fff;
+}
+
+.website__rights a{
   color: #fff;
 }
 
@@ -725,17 +891,221 @@
 
 .profile_img{
   border-radius:10%;
-  width:150px;
-  height:185px;
-  border: 10px solid rgb(252, 152, 3);
+  width:300px;
+  height:400px;
+  border: 10px solid  #ff7708;
   border-image-slice: 1;
   border-width: 5px;
   text-align: left;
-
 }
 .img{
   width:150px;
   height:185px;
   text-align: center;
   /* text-align: left; */
+}
+
+.edu {
+  background-color: #131313;
+  padding: 5rem 0;
+}
+
+.edu__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 90%;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  padding: 1rem 0;
+}
+
+
+.edu__content {
+  color: #fff;
+  width: 100%;
+}
+
+.edu__content h1 {
+  font-size: 2rem;
+  background-color: #fe3b6f;
+  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+}
+
+.edu__content h2 {
+  font-size: 4rem;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9114ff,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f0eff,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.edu__content p {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 50;
+  text-align: left;
+}
+
+
+.edu__content {
+  color: #fff;
+  width: 100%;
+}
+
+.edu__content h1 {
+  font-size: 3rem;
+  background-color: #fe3b6f;
+  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+}
+
+.edu__content h2 {
+  font-size: 3rem;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9114ff,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f0eff,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.edu__content h3 {
+  font-size: 2rem;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9114ff,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #8f0eff,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.edu__content p {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  font-weight: 50;
+  text-align: center;
+}
+.edu__content p1 {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 2rem;
+  font-weight: 60;
+  text-align: center;
+  background: #ff8177; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #fd1280,
+    #da22ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #fd1280,
+    #da22ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.edu__content a {
+  font-size: 1.5rem;
+  color: #fff
+}
+.edu__btn {
+  font-size: 1.5rem;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  padding: 15px 60px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.35s;
+  outline: none;
+}
+
+.edu__btn a {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  text-decoration: none;
+}
+
+.edu__btn:after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #ff1ead;
+  transition: all 0.35s;
+  border-radius: 4px;
+}
+
+.edu__btn:hover {
+  color: #fff;
+}
+
+.edu__btn:hover:after {
+  width: 100%;
+}
+
+.edu__img--container {
+  text-align: center;
+}
+
+th, td {
+  padding: 15px;
 }
