--- a/styles.css
+++ b/styles.css
@@ -65,34 +65,8 @@
   transition: all 0.3s ease;
 }
 
-.navbar__btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 1rem;
-  width: 100%;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  padding: 10px 20px;
-  height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-radius: 4px;
-  background: #833ab4;
-  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  color: #fff;
-  transition: all 0.3s ease;
-}
-
 .navbar__links:hover {
-  color: #9518fc;
+  color: #9f02fa;
   transition: all 0.3s ease;
 }
 
@@ -125,7 +99,7 @@
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 99;
-    height: 60vh;
+    height: 80vh;
     font-size: 1.6rem;
   }
 
@@ -150,19 +124,6 @@
     padding: 2rem;
     width: 100%;
     display: table;
-  }
-
-  .navbar__btn {
-    padding-bottom: 2rem;
-  }
-
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    height: 80px;
-    margin: 0;
   }
 
   #mobile-menu {
@@ -193,8 +154,12 @@
 /* Hero Section */
 .hero {
   background: #000000;
-  background: linear-gradient(to right, #161616, #000000);
-  padding: 200px 0;
+  /* background-image: url("./Imgs/istockphoto-1140849287-170667a.jpg");
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; */
+  background: linear-gradient(to right, #030303, #131313);
+  padding: 150px 0;
 }
 
 .hero__container {
@@ -206,7 +171,7 @@
   margin: 0 auto;
   height: 90%;
   text-align: center;
-  padding: 30px;
+  padding: 15px;
 }
 
 .hero__heading {
@@ -216,17 +181,9 @@
 }
 
 .hero__heading span {
-  background: #ee0979; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ff6a00,
-    #ee0979
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ff6a00,
-    #ee0979
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #ee6509; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #ff08ff 0%, #00eeff 100%); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #ff08ff 0%, #00eeff 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -295,8 +252,8 @@
 
 .main__content h1 {
   font-size: 2rem;
-  background-color: #fe3b6f;
-  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-color: #fc7405;
+  background-image: linear-gradient(to top, #ff4208 0%, #edb51a 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -311,13 +268,15 @@
   background: #ff8177; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #9114ff,
-    #da22ff
+    #0044ff,
+    #045e40,
+    #0044ff
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #8f0eff,
-    #da22ff
+    #0044ff,
+    #045e40,
+    #0044ff
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -341,8 +300,8 @@
 
 .main__content h1 {
   font-size: 3rem;
-  background-color: #fe3b6f;
-  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-color: #ff7b00;
+  background-image: linear-gradient(to top, #ff08ff 0%, #00eeff 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -357,13 +316,15 @@
   background: #ff8177; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #9114ff,
-    #da22ff
+    #0044ff,
+    #045e40,
+    #0044ff
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #8f0eff,
-    #da22ff
+    #0044ff,
+    #045e40,
+    #0044ff
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -376,13 +337,11 @@
   background: #ff8177; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #9114ff,
-    #da22ff
+    #08ffad 0%,#fcfcfa 30%, #0051ff 100%
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #8f0eff,
-    #da22ff
+    #00ffbf 0%,#ffffff 30%, #0051ff 100%
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -400,8 +359,8 @@
 .main__btn {
   font-size: 1.5rem;
   background: #833ab4;
-  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  background: -webkit-linear-gradient(-225deg #4b047a, #fd9504, #fd9504,#4b047a);
+  background: linear-gradient(-225deg, #4b047a, #fd9504, #fd9504,#4b047a);
   padding: 15px 60px;
   border: none;
   border-radius: 4px;
@@ -426,7 +385,7 @@
   left: 0;
   width: 0;
   height: 100%;
-  background: #ff1ead;
+  background: #ff9102;
   transition: all 0.35s;
   border-radius: 4px;
 }
@@ -443,26 +402,11 @@
   text-align: center;
 }
 
-/* .main__img--card {
-  margin: 5px;
-  height: 300px;
-  width: 300px;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
-} */
-
-.fa-heart {
-  font-size: 14rem;
-}
 
 #card-2 {
   background: #ff512f;
   background: -webkit-linear-gradient(to right, #dd2476, #ff512f);
-  background: linear-gradient(to right, #dd2476, #ff512f);
+  background: linear-gradient(to right, #ff0800, #ff512f);
 }
 
 /* Mobile Responsive */
@@ -547,8 +491,8 @@
 }
 
 .experience h1 {
-  background-color: #ff8177;
-  background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+  background-color: #ff3c00;
+  background-image: linear-gradient(to top, #ff08ff 0%, #00eeff 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -644,8 +588,8 @@
 }
 
 .project h1 {
-  background-color: #ff8177;
-  background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+  background-color: #ff6b08;
+  background-image: linear-gradient(to top, #ff08ff 0%, #00eeff 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -930,8 +874,8 @@
 
 .edu__content h1 {
   font-size: 2rem;
-  background-color: #fe3b6f;
-  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-color: #ff8800;
+  background-image: linear-gradient(to top, #8cff08 0%, #00ff80 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -943,16 +887,19 @@
 
 .edu__content h2 {
   font-size: 4rem;
-  background: #ff8177; /* fallback for old browsers */
+  background: #f85b00; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #9114ff,
-    #da22ff
+    #ffbb01,
+    #ff0140,
+    #ffbb01
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #8f0eff,
-    #da22ff
+    #ffbb01,
+    #ff0140,
+    #ffbb01
+
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -977,7 +924,7 @@
 .edu__content h1 {
   font-size: 3rem;
   background-color: #fe3b6f;
-  background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+  background-image: linear-gradient(to top, #ff08ff 0%, #00eeff 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -1011,13 +958,13 @@
   background: #ff8177; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #9114ff,
-    #da22ff
+    #14e4ff,
+    #00f56e
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #8f0eff,
-    #da22ff
+    #14e4ff,
+    #00f56e
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
