--- a/styles.css
+++ b/styles.css
@@ -837,9 +837,9 @@
   border-radius:10%;
   width:300px;
   height:400px;
-  border: 10px solid  #ff7708;
+  /* border: 10px solid  #ff7708;
   border-image-slice: 1;
-  border-width: 5px;
+  border-width: 5px; */
   text-align: left;
 }
 .img{
